...
                        Button {
                            dismiss()
                            filterModel.filterState = filterState
                            onDismiss()
                        } label: {
                            Text(.localizable(.done))
                                .accessibilityIdentifier("dismissButton")
                        }
                    }
                }
            }
        }
    }
...
                            Text(.localizable(.tags))
                        }
                    }
                }, active: filterState.tags != .any) {
                    present(.tags)
                }
                .accessibilityIdentifier("filterBarTagsFilterButton")

                Element(label: {
                    CommonElementLabel(DocumentType.self,
                                       state: filterState.documentType)
                }, active: filterState.documentType != .any) { present(.documentType) }

...
