...
    }

    .toolbar {
      Button(String(localized: .localizable(.edit))) {
        editing.toggle()
      }
      .accessibilityIdentifier("documentEditButton")
    }

    .sheet(isPresented: $editing) {
      DocumentEditView(
        store: store,
        document: $document,
...
